log/build_2022-09-05_15-14-28/decoding_element/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/workspace/BMI/install/decoding_element/lib/python3.10/site-packages/decoding_element/data_integrator.py", line 33
    entry_observation_groups = ['/system_{}/passive_observation'.format(str(parameters['system'])]
                                                                                                 ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('

